# BotatoMaster

./: Cargo.toml  LICENSE  README.md  roadmap.md
docs/: commands.md
migrations/: 20241126091016_initial_migration.sql
src/: main.rs
src/commands/: help.rs  mod.rs  preferences.rs  response.rs  utils.rs
src/database/: mod.rs
src/database/models/: content_matcher.rs  mod.rs  response.rs  selector.rs
src/message_matcher/: matcher.rs  mod.rs  responder.rs  selector.rs
