[package]
name = "botatomaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
dotenv = "0.15.0"
regex = "1.11.1"
rand = "0.8.5"
