[package]
name = "botatomaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
regex = "1.11.1"
rand = "0.8.5"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "macros"] }
chrono = "0.4.38"
eyre = "0.6.12"
poise = "0.6.1"
